@@ -683,10 +683,6 @@ WIDGET_DEFAULT = {
         "warning_color_wheel_slip": "#FFAA00",
         "wheel_lock_threshold": 0.2,
         "wheel_slip_threshold": 0.1,
-        "last_wheel_radius_front": 0.320,
-        "last_wheel_radius_rear": 0.320,
-        "last_vehicle_info": "unknown",
-        "minimum_speed": 16.5,
         "column_index_headlights": 1,
         "column_index_ignition": 2,
         "column_index_clutch": 3,
